# ngdb

./: .gitignore  Cargo.toml  README.md
examples/: advanced.rs  backup_restore.rs  basic_usage.rs  nested_refs.rs  replication.rs  replication_full.rs  thread_safe_transactions.rs  transactions.rs  user_struct.rs
ngdb/: Cargo.toml
ngdb/examples/: derive_macro.rs  nested_refs.rs  replication.rs  replication_full.rs  thread_safe_transactions.rs  threadsafe_refs.rs  transactions.rs  user_struct.rs
ngdb/src/: db.rs  lib.rs  refs.rs  replication.rs  traits.rs
ngdb_derive/: Cargo.toml
ngdb_derive/src/: lib.rs
ngdb_macros/: Cargo.toml
ngdb_macros/src/: lib.rs
src/: config.rs  db.rs  error.rs  lib.rs  refs.rs  replication.rs  serialization.rs  traits.rs
