[package]
name = "ngdb"
version = "0.2.0"
edition = "2021"
authors = ["OnlyF0uR"]
license = "MIT OR Apache-2.0"
description = "A high-performance, thread-safe RocksDB wrapper with zero async overhead"
repository = "https://github.com/OnlyF0uR/ngdb"
keywords = ["database", "rocksdb", "kv-store", "embedded"]
categories = ["database"]

[dependencies]
rocksdb = { version = "0.24", default-features = false, features = ["lz4", "multi-threaded-cf"] }
bincode = { version = "2.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "ngdb"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "user_struct"
path = "examples/user_struct.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

[[example]]
name = "transactions"
path = "examples/transactions.rs"

[[example]]
name = "thread_safe_transactions"
path = "examples/thread_safe_transactions.rs"

[[example]]
name = "backup_restore"
path = "examples/backup_restore.rs"

[[example]]
name = "replication"
path = "examples/replication.rs"

[[example]]
name = "replication_full"
path = "examples/replication_full.rs"
