[package]
name = "ngdb_derive"
version = "2.0.0"
edition = "2021"
authors = ["NGDB Contributors"]
description = "Procedural macros for NGDB"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
